--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -129,6 +129,7 @@
             padding: 10px 0px 20px;
         }
 
+
         .modal-body {
             button {
                 margin-left: 5px;
@@ -144,6 +145,28 @@
             &:hover {
                 box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
                 background: #f9f9f9;
+            }
+            .lightbox {
+                display: none;
+                position: fixed;
+                z-index: 999;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                top: 0;
+                left: 0;
+                background: rgba(0,0,0,0.8);
+            }
+
+            .lightbox img {
+                max-width: 90%;
+                max-height: 80%;
+                margin-top: 2%;
+            }
+
+            .lightbox:target {
+                outline: none;
+                display: block;
             }
 
             .file-preview {
