--- a/views/administration/courses.hbs
+++ b/views/administration/courses.hbs
@@ -36,7 +36,18 @@
                         {{> "administration/forms/form-courses"}}
                     {{/content}}
                 {{/embed}}
-
+                {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
+                    {{#content "body"}}
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary btn-close">
+                                Abbrechen
+                            </button>
+                            <button type="submit" class="btn btn-primary btn-submit">
+                                Löschen
+                            </button>
+                        </div>
+                    {{/content}}
+                {{/embed}}
             </section>
         </div>
     {{/content}}
