--- a/views/lib/components/table.hbs
+++ b/views/lib/components/table.hbs
@@ -18,12 +18,13 @@
                             <td class="table-actions">
                                 {{#each this}}
                                     {{#if this.method}}
-                                        <form action="{{this.link}}" method="post" class="inline">
-                                            <input type="hidden" name="_method" value="{{this.method}}"/>
-                                            <button type="submit" class="btn btn-secondary btn-sm {{this.class}}">
-                                                <i class="fa fa-{{this.icon}}"></i> {{this.label}}
-                                            </button>
-                                        </form>
+                                        <a class="btn btn-secondary btn-sm {{this.class}}"
+                                           href="{{this.link}}"
+                                           target="_blank"
+                                           data-method="delete-material"
+                                           data-name="{{this.name}}">
+                                            <i class="fa fa-{{this.icon}}"></i> {{this.label}}
+                                        </a>
                                     {{else}}
                                         <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}">
                                             <i class="fa fa-{{this.icon}}"></i> {{this.label}}
