--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -67,7 +67,9 @@
                     <i class="fa fa-plus" aria-hidden="true"></i>
                     <p>Aufgabe hinzufügen</p>
                 </button>
-                
+                <a href="/homework/export" class="btn btn-secondary download" alt="Download Tasks as .csv">
+                    <i class="fa fa-download" aria-hidden="true"></i>
+                </a>
                 <div class="form-group sort">
                     <select name="sort" id="sortselection" data-placeholder="Sortieren">
                         {{#each sortmethods}}
