--- a/static/styles/content/search.scss
+++ b/static/styles/content/search.scss
@@ -8,6 +8,8 @@
         text-align: center;
     }
 
+
+
 }
 .search-wrapper {
     margin-bottom: 1em;
@@ -30,4 +32,8 @@
     color: #BDBDBD;
     float: right;
     font-size: small;
+}
+.card-img-top {
+    height: auto;
+    width: 100%;
 }
