--- a/views/content/search.hbs
+++ b/views/content/search.hbs
@@ -113,7 +113,7 @@
                                     {{/if}}
                                 </div>
                                 <div class="card-footer">
-                                    <small class="text-muted"> via {{this.client}} | 17. November 2016</small>
+                                    <small class="text-muted"> via {{this.client}}</small>
                                     {{#userHasPermission "COURSE_EDIT"}}
                                         <a class="add-to-lesson" href="{{../this.href}}"><i
                                                 class="fa fa-plus-square"></i></a>
