--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -79,8 +79,8 @@
                                                 </tr>
                                                 </tbody></table>
                                         </div>
-                                        <div class="current-time" style="width:34.583333333333336%;">
-                                            <span>10:46</span>
+                                        <div class="current-time" style="width: 78%;">
+                                            <span></span>
                                         </div>
                                     </div>
                                 </div>
