--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -229,7 +229,7 @@
                         Abbrechen
                     </button>
 
-                    <button type="submit" value="Submit" class="btn btn-primary btn-submit">
+                    <button type="submit" class="btn btn-primary btn-submit">
                         Verschieben
                     </button>
                 </div>
