fix permissions for tool modification

--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -121,8 +121,10 @@
                 </div>
 
                 <div class="col-sm-6">
+                    {{#userHasPermission "COURSE_EDIT" }}
                         <a href="/courses/{{_id}}/tools/add" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="Neues Tool hinzufügen">
                             <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> Neues Tool hinzufügen</span></a>
+                    {{/userHasPermission}}
                     <h4>Tools</h4>
 
                     <div class="list-group">
@@ -139,7 +141,7 @@
                                                  style="width:auto; height:75px;"/>
                                         {{/if}}
                                         <span>{{this.name}}</span>
-
+                                        {{#userHasPermission "COURSE_EDIT" }}
                                         <a class="delete-tool"
                                            href="/courses/{{../_id}}/tools/delete/{{this._id}}"
                                            target="_blank"
@@ -147,6 +149,7 @@
                                            data-name="{{this.name}}">
                                             <i class="fa fa-trash-o"></i>
                                         </a>
+                                        {{/userHasPermission}}
                                     </p>
                                 </div>
                             {{/each}}
