--- a/theme/n21/views/imprint/imprint.hbs
+++ b/theme/n21/views/imprint/imprint.hbs
@@ -366,7 +366,7 @@ Landesinitiative n-21 gesetzlich verpflichtet sind.</span></p>
 style='font-size:12.0pt;color:#373A3C'>Aus technischen oder organisatorischen
 Gründen behält sich der Technikpartner HPI vor, einzelne
 Hosting-Dienstleistungen an Subunternehmer zu vergeben. Dies trifft im
-besonderen Maße auf die Daten der NBC-Schulen zu. Die Datei</span></p>
+besonderen Maße auf die Daten der NBC-Schulen zu.</span></p>
 
 <p class=MsoNormal style='margin-bottom:12.0pt;line-height:normal'><span
 style='font-size:12.0pt;color:#373A3C'>Für die Nutzung interaktiver Inhalte
