added: underline fro certain text

--- a/theme/n21/views/imprint/imprint.hbs
+++ b/theme/n21/views/imprint/imprint.hbs
@@ -95,7 +95,7 @@ style='font-size:15.0pt;color:#373A3C'>Privatsphäre und Datenschutz</span></b><
 <p class=MsoNormal style='margin-bottom:12.0pt;line-height:normal'><span
 style='font-size:12.0pt;color:#373A3C'>Mit der Niedersächsische Bildungscloud
 eröffnet die Landesinitiative n-21 die Möglichkeit, über eine Weboberfläche das
-vernetztes Lernen und Arbeiten über Schulgrenzen hinweg möglich zu machen. Alle
+vernetztes <u> kollaboratives Lernen und Arbeiten über Schulgrenzen hinweg</u> möglich zu machen. Alle
 Nutzer/innen – Schüler/innen bzw. Lehrkräfte – erhalten einen eigenen Zugang
 zur Niedersächsische Bildungscloud. Über diesen können die Schüler/innen die
 bereitgestellten Arbeitsmaterialien und Aufgaben bearbeiten und weitere
