--- a/theme/n21/views/authentication/home.hbs
+++ b/theme/n21/views/authentication/home.hbs
@@ -54,6 +54,7 @@
                         modular-skalierbaren Ansatz verfolgen. Durch diese Kooperation bietet sich die Chance über das Stadium
                         des Prototypen hinaus, bereits während der Erprobungsphase eine Plattform zu entwickeln, die langfristig
                         bundesweit und länderspezifisch effizient eingesetzt werden kann.</p>
+                    <p>Die Entwicklung des Projektes ist in einer <a href="https://www.netz-21.de/?page_id=1124">Timeline</a> übersichtlich dargestellt. Aktuelle Nachrichten über das Projektgeschehen <a href="https://www.netz-21.de">finden sich an dieser Stelle.</a> </p>
 
 
                     <div class="jumbotron">
