--- a/theme/n21/views/authentication/home.hbs
+++ b/theme/n21/views/authentication/home.hbs
@@ -65,13 +65,14 @@ Die folgenden Schulen und Studienseminare sind unmittelbar Projekt NBC beteiligt
 <li>Gymnasium Neue Oberschule, Braunschweig</li>
 <li>Gymnasium Raabeschule, Braunschweig</li>
 <li>IGS Buchholz</li>
-<li>IGS Heidberg, Baunschweig</li>
+<li>IGS Heidberg, Braunschweig</li>
 <li>IGS Heinrich-Nordhoff, Wolfsburg</li>
 <li>IGS Lengede</li>
 <li>IGS Waldschule Egels mit IGS Aurich-West</li>
 <li>NIG-Esens</li>
 <li>Oberschule Gehrden</li>
-<li>Studienseminar für das Lehramt an Gymnasien Stade</li>
+
+<li>Studienseminar für Lehrämter an Grund-, Haupt- und Realschulen</li>
 <li>Studienseminar Hannover für das Lehramt an berufsbildenden Schulen</li>
 </ul>
 </div>
