--- a/theme/n21/views/authentication/home.hbs
+++ b/theme/n21/views/authentication/home.hbs
@@ -38,7 +38,7 @@
 
 <p>Das Konzept der NBC sieht eine enge Einbindung der an den Schulen genutzten digitalen Lern- und Arbeitsumgebungen vor. Dadurch werden die etablierten und bewährten Lern- und Arbeitsumgebungen an den Schulen nicht ersetzt, sondern vielmehr durch schulübergreifende Möglichkeiten ergänzt. Durch die Anbindung von schulspezifischen Anwendungen und verschiedenen Lern- und Arbeitsumgebungen auf der schulischen Ebene (vgl. Abb. 3), stellt die NBC als Arbeitsplattform (Ebene 1) einen unmittelbaren Kontakt zwischen den beteiligten Schulen her. Diese wird durch die Ebene 2 in Form eines Vermittlungsdienstes bzw. einer dokumentierte API-Schnittstelle ermöglicht.</p>
 
-<p>Anwendungsszenarien wie Remote Controlled Laboratory, Unterricht mit Videokonferenzsystemen und Planspiele/Simulationen sind in konzeptioneller Hinsicht für gemeinsame Unterrichtsprojekte bereits in der Projektplanung berücksichtigt und vorbereitet.</p>
+<p>Anwendungsszenarien wie Remote Controlled Laboratory, Unterricht mit Videokonferenzsystemen und Planspiele/Simulationen sind in konzeptioneller Hinsicht für gemeinsame Unterrichtsprojekte bereits in der Projektplanung berücksichtigt.</p>
 
 <p>Mit dem Team des <a href="https://schul-cloud.org/">Hasso-Plattner-Instituts</a> wurde eine Entwicklungspartnerschaft eingegangen, da beide Projekte hinsichtlich der Offensive „#D“ und der „Ziellinie 2020“ identische Zielsetzungen haben und den gleichen, modular-skalierbaren Ansatz verfolgen. Durch diese Kooperation bietet sich die Chance über das Stadium des Prototypen hinaus, bereits während der Erprobungsphase eine Plattform zu entwickeln, die langfristig bundesweit und länderspezifisch effizient eingesetzt werden kann.</p>
 
